--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
     "builds": [{
         "src": "officezenith/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
     }],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "officezenith/wsgi.py"
