--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [{
         "src": "officezenith/wsgi.py",
         "use": "@vercel/python",
@@ -7,11 +8,12 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/static/$1"
+            "dest": "/staticfiles/$1"
         },
         {
             "src": "/(.*)",
             "dest": "officezenith/wsgi.py"
         }
-    ]
+    ],
+    "outputDirectory": "staticfiles"
 }
