--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
-    "version": 2,
-    "builds": [{
-        "src": "officezenith/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }
-    }],
-    "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/staticfiles/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "officezenith/wsgi.py"
-        }
-    ],
-    "outputDirectory": "staticfiles"
+  "version": 2,
+  "builds": [
+    {
+      "src": "officezenith/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles" }
+    }
+  ],
+  "routes": [
+    { "src": "/static/(.*)", "dest": "/staticfiles/$1", "headers": { "Cache-Control": "public, max-age=3600" } },
+    { "src": "/(.*)", "dest": "officezenith/wsgi.py" }
+  ]
 }
